--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,57 @@
-<h1>my ejs page</h1>
-<br> 
-<%=myServerVariable %> 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snack Attack App</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-bootstrap/0.5pre/assets/css/bootstrap.min.css'>
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <p class="navbar-name">Snack Attack Pack 🍗🍣🍔🥩</p>
+        <!-- 
+        <button class="hambgrMenu" onclick="toggleMenu()">&#9776;</button>
+        <div id="pgMenu" class="pgMenu">
+            <a class="repoLink" href="https://github.com/babayaga1013/dev-ida-lab-sorensen" target="_blank">REPO</a>
+        </div>
+        -->
+    </nav>
+
+    <form id="conversionForm" method="POST" action="/saveConverted" class="mt-3">
+        <div class="container">
+            <h1>Snack List 🛒</h1>
+            <div class="input-section">
+                <input type="text" id="item" name="convertedText" placeholder="Add a grocery item">
+                <button id="addButton" class="btn btn-primary">Add Item</button>
+            </div>
+
+            <!-- <ul id="groceryList"></ul> -->
+        </div>
+    </form>
+
+    <div class="container mt-4">
+        <ul class="list-group">
+            <% for (var i=0; i < postData.length; i++) { %>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <form method="POST" action="/update/<%= postData[i]._id %>" class="d-flex flex-grow-1">
+                        <input type="text" name="newPost" class="form-control me-2" value="<%= postData[i].post %>"
+                            required>
+                        <button type="submit" class="btn btn-warning me-2">Update</button>
+                    </form>
+                    <form method="POST" action="/delete/<%= postData[i]._id %>">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                </li>
+                <% } %>
+        </ul>
+    </div>
+</body>
+
+</html>
